cabal-version:      3.0
name:               bencoding-lens
version:            0.1.0.0
synopsis:           Lenses for bencoded data.
description:        A port of lens-aeson for bencoding.
homepage:           https://github.com/jmorag/bencoding-lens
bug-reports:        https://github.com/jmorag/bencoding-lens/issues
license:            BSD-3-Clause
author:             Joseph Morag
maintainer:         Joseph Morag <jm@josephmorag.com>
copyright:          (c) 2021, Joseph Morag
category:           Data
extra-source-files: README.md

library
  default-language: Haskell2010
  hs-source-dirs:   src
  exposed-modules:  Data.BEncode.Lens
  ghc-options:      -Wall -Wincomplete-uni-patterns
  build-depends:
    , base       <5
    , bencoding  <0.5
    , bytestring
    , lens       <6
